# calcium-plasticity

./: .gitignore  README.md  args.py  basic.ipynb  config.py  pyproject.toml  simulation.py  utils.py
network/: args.py  brian2.py  config.py  eval.py  model.py  train.py  utils.py
scripts/: bench_stdp.py
